--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/John/Documents/Πανεπιστήμιο/Διπλωματική/Program/weka-3-8-0/weka.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
